--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,18 +25,18 @@
         </section>
         <section>
             <div class="container my-5 d-flex justify-content-center">
-                <form action="/" enctype="multipart/form-data" method="post">
+                <form id="formulary" >
                     <div class="mb-3">
-                        <label class="form-label", id="inputGroup-sizing-default", for="title"> Titutlo </label>
-                        <input type="text" name="title", class="form-control", aria-label="Sizing example input", aria-describedby="inputGroup-sizing-default">
+                        <label class="form-label", id="inputGroup-sizing-default", for="title"> Titulo </label>
+                        <input id="title" type="text" name="title", class="form-control", aria-label="Sizing example input", aria-describedby="inputGroup-sizing-default">
                     </div>
                     <div class="mb-3">
                         <label class="form-label", id="inputGroup-sizing-default", for="price"> Precio $ </label>
-                        <input type="number" name="price", class="form-control", aria-label="Amount (to the nearest dollar)">
+                        <input id="price" type="number" name="price", class="form-control", aria-label="Amount (to the nearest dollar)">
                     </div>
                     <div class="mb-3"> 
                         <label class="form-label", id="inputGroup-sizing-default", for="thumbnail"> Foto del Producto </label>
-                        <input type="file" name="thumbnail", class="form-control", aria-label="Sizing example input", aria-describedby="inputGroup-sizing-default">
+                        <input id="thumbnail" type="file" name="thumbnail", class="form-control", aria-label="Sizing example input", aria-describedby="inputGroup-sizing-default">
                     </div>
                     <div class="text-center"> 
                         <button id="button" type="submit" class="btn btn-info text-white"> Agregar producto </button>
