change reload products

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,16 +14,13 @@
                 <nav>
                     <ul class="nav d-flex justify-content-center">
                         <li class="nav-item"> 
-                            <a href="/" class="nav-link active"> Ver todos los productos </a>
-                        </li>
-                        <li class="nav-item"> 
-                            <a href="/" class="nav-link" > Agregar nuevo producto </a>
+                            API NODEjs with websocket
                         </li>
                     </ul>
                 </nav>
             </div>
         </section>
-        <section>
+        <section id="section-form">
             <div class="container my-5 d-flex justify-content-center">
                 <form id="formulary" >
                     <div class="mb-3">
@@ -44,9 +41,16 @@
                 </form>
             </div>
         </section>
-        <section>
+        <section id="section-cards">
             <div class="container">
                 <div id="cards" class="row"> 
+                </div>
+            </div>
+        </section>
+        <section id="section-chat">
+            <div class="container">
+                <div>
+
                 </div>
             </div>
         </section>
