--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,23 @@ body{
     color:rgb(243, 38, 99);
     font-size: 18px;
     font-weight: 500;
+    list-style: none;
+}
+
+#userName{
+    color: rgb(0, 135, 212);
+    font-size: 15px;
+    font-weight: 500;
+}
+
+#btn-cart{
+    color: rgb(10, 83, 107);
+    border: none;
+    background: none;
+}
+
+#btn-cart:hover{
+    color: green;
 }
 
 .card{
@@ -16,6 +33,82 @@ body{
     border-color: rgb(241, 144, 99);
 }
 
-.title{
-    color: rgb(236, 52, 46);
+/* #messages{
+    background-color: darkgray;
+} */
+
+#chat{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 500px;
+    background-color: rgb(143, 107, 107);
+}
+
+#messages .remote {
+    margin-bottom: 1rem;
+}
+
+#messages{
+    flex-grow: 4;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+}
+
+#messages .message-data{
+    margin-bottom: 10px;
+}
+
+#messages .user{
+    color: rgb(19, 50, 80);
+}
+
+#messages .message-data .date-time{
+    color: rgb(133, 48, 48);
+    padding-left: 6px;
+}
+
+#messages .message-body{
+    background:#93ac8a;
+    border-radius:7px;
+    margin-bottom: 30px;
+    width: 65%;
+    position: relative;
+    color: white;
+    padding: 18px, 20px;
+    line-height: 26px;
+    font-size: 16px;
+}
+
+#messages .local .message-body {
+    background: #3f688f;
+    float: right;
+    
+}
+
+#messages .local .message-data{
+    margin-bottom: 10px;
+    float: right;
+}
+
+#messages .local .message-body:after{
+    border-bottom-color: #5a88b3;
+    left: 85%;
+    width: auto;
+}
+
+#messages .message-body:after{
+    bottom: 100%;
+    left: 25%;
+    border: solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+    border-bottom-color: #86bb71;
+    border-width: 7px;
+    margin-left: -10px;
 }
