--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,24 +4,27 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Api REST full NODE</title>
+        <title>Ecommerce</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="/static/css/style.css">
     </head>
     <body>
-        <section>
-            <div class="container">
+        <section id="section-nav">
+            <div class="container-fluid">
                 <nav>
-                    <ul class="nav d-flex justify-content-center">
-                        <li class="nav-item"> 
-                            API NODEjs with websocket
-                        </li>
+                    <ul class="nav justify-content-between">
+                        <div>
+                            <p class=" d-inline nav-item"> 
+                                Ecommerce
+                            </p>
+                        </div>
                     </ul>
                 </nav>
             </div>
         </section>
         <section id="section-form">
-            <div class="container my-5 d-flex justify-content-center">
+            <h1>Ingrese un producto</h1>
+            <div class="container my-5 justify-content-center">
                 <form id="formulary" >
                     <div class="mb-3">
                         <label class="form-label", id="inputGroup-sizing-default", for="title"> Titulo </label>
@@ -42,19 +45,31 @@
             </div>
         </section>
         <section id="section-cards">
+            <h2>Lista de Productos</h2>
             <div class="container">
                 <div id="cards" class="row"> 
                 </div>
             </div>
         </section>
         <section id="section-chat">
-            <div class="container">
+            <h3>Chat</h3>
+            <div class="container" id="chat">
                 <div>
-
+                    <input type="text" id="username" name="username" value="">
+                </div>
+                <div id="messages"> 
+                </div>
+                <div>
+                    <input type="text" id="message" name="message" value="">
+                    <button id="btn-message" type="submit" class="btn btn-info text-white"> Enviar! </button>
                 </div>
             </div>
         </section>
     </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://kit.fontawesome.com/798fa29871.js" crossorigin="anonymous"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/static/js/websocket.js"></script>
+    <script src="/static/js/products.js"></script>
+    <script src="/static/js/chat.js"></script>
+
 </html>
