--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -52,14 +52,15 @@
             </div>
         </section>
         <section id="section-chat">
-            <h3>Chat</h3>
+            <h3 class="chat-title">Chat</h3>
             <div class="container" id="chat">
-                <div>
+                <div class="name-input">
+                    <p id="putName">Ingrese su email</p>
                     <input type="text" id="username" name="username" value="">
                 </div>
                 <div id="messages"> 
                 </div>
-                <div>
+                <div class="message-input">
                     <input type="text" id="message" name="message" value="">
                     <button id="btn-message" type="submit" class="btn btn-info text-white"> Enviar! </button>
                 </div>
