--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -23,7 +23,9 @@
             </div>
         </section>
         <section id="section-form">
-            <h1>Ingrese un producto</h1>
+            <div class="title">
+                <h1>Ingrese un producto</h1>
+            </div>
             <div class="container my-5 justify-content-center">
                 <form id="formulary" >
                     <div class="mb-3">
@@ -45,14 +47,18 @@
             </div>
         </section>
         <section id="section-cards">
-            <h2>Lista de Productos</h2>
-            <div class="container">
+            <div class="title">
+                <h2>Lista de Productos</h2>
+            </div>
+            <div class="container" id="products">
                 <div id="cards" class="row"> 
                 </div>
             </div>
         </section>
         <section id="section-chat">
-            <h3 class="chat-title">Chat</h3>
+            <div class="title">
+                <h3 class="chat-title">Chat</h3>
+            </div>
             <div class="container" id="chat">
                 <div class="name-input">
                     <p id="putName">Ingrese su email</p>
