--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -38,7 +38,7 @@
                     </div>
                     <div class="mb-3"> 
                         <label class="form-label", id="inputGroup-sizing-default", for="thumbnail"> Foto del Producto </label>
-                        <input id="thumbnail" type="file" name="thumbnail", class="form-control", aria-label="Sizing example input", aria-describedby="inputGroup-sizing-default">
+                        <input required id="thumbnail" type="file" name="thumbnail", class="form-control", aria-label="Sizing example input", aria-describedby="inputGroup-sizing-default">
                     </div>
                     <div class="text-center"> 
                         <button id="button" type="submit" class="btn btn-info text-white"> Agregar producto </button>
@@ -62,7 +62,7 @@
             <div class="container" id="chat">
                 <div class="name-input">
                     <p id="putName">Ingrese su email</p>
-                    <input type="text" id="username" name="username" value="">
+                    <input type="text" id="username" name="username" value="" required>
                 </div>
                 <div id="messages"> 
                 </div>
