--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -62,7 +62,7 @@
             <div class="container" id="chat">
                 <div class="name-input">
                     <p id="putName">Ingrese su email</p>
-                    <input type="text" id="username" name="username" value="" required>
+                    <input type="text" id="username" name="username" value="" required="true">
                 </div>
                 <div id="messages"> 
                 </div>
